--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<meta name="description" content="{{ site.description }}">
+		<meta name="description" content="{{ site.description }}" />
 		<title>{{ site.title }}</title>
 		<link rel="stylesheet" href="css/css.css" />
 	</head>
 
 	<body>
 		{{ content }}
+		<script src="js/ffo.js"></script>
 		<script src="js/js.js"></script>
 	</body>
 </html>
