Add basic variable font support check/message

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -13,6 +13,17 @@
 	font-style: italic;
 }
 
+// Variable font support
+.variable-support {
+	display: block;
+}
+
+@supports (font-variation-settings: normal) {
+	.variable-support {
+		display: none;
+	}
+}
+
 // Setup
 :root {
 	--page-bg: #{$page-bg};
