--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -3,13 +3,13 @@
 // This will be replaced by calls to the Google Fonts API
 @font-face {
 	font-family: Fraunces;
-	src: url(../Fraunces_GoofyAxis-VF.ttf);
+	src: url("../fonts/Fraunces_GoofyAxis-VF.ttf");
 	font-weight: 1 1000;
 }
 
 @font-face {
 	font-family: Fraunces;
-	src: url(../FrauncesItalic_GoofyAxis-VF.ttf);
+	src: url("../fonts/FrauncesItalic_GoofyAxis-VF.ttf");
 	font-style: italic;
 }
 
@@ -40,8 +40,7 @@
 *::before,
 *::after {
 	box-sizing: border-box;
-	font-variation-settings: "opsz" var(--opsz), "wght" var(--wght), "GOOF" var(--GOOF),
-		"WONK" var(--WONK);
+	font-variation-settings: "opsz" var(--opsz), "wght" var(--wght), "GOOF" var(--GOOF), "WONK" var(--WONK);
 }
 
 html,
