--- a/_includes/character-grid.html
+++ b/_includes/character-grid.html
@@ -1,5 +1,5 @@
 <ol class="character-grid">
-	{% for char in site.chars %}
+	{% for char in site.data.charset %}
 	<li>{{ char }}</li>
 	{% endfor %}
 </ol>
