Clean up examples, refactor

--- a/_sass/_animation.scss
+++ b/_sass/_animation.scss
@@ -1,7 +1,19 @@
 .animates {
-    transition: background 1s; // To show effect of adding .in-view class
+	transition: background 1s; // To show effect of adding .in-view class
+	animation: example-animation 4s infinite alternate;
+	animation-play-state: paused;
 }
 
 .animates.in-view {
-    background: hotpink;
+	background: black;
+	animation-play-state: running;
+}
+
+@keyframes example-animation {
+	from {
+		color: red;
+	}
+	to {
+		color: lime;
+	}
 }
