--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -26,8 +26,8 @@
 
 // Setup
 :root {
-	--page-bg: #{$page-bg};
-	--page-text: #{$page-text};
+	--page-bg: #fff;
+	--page-text: #000;
 
 	// Font axes
 	--opsz: 9;
