--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!--
+			Once we load from Google Fonts API:
+			<link rel="preconnect" href="https://fonts.gstatic.com" />
+		-->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
