Add actual axes (and step option) for test font
Using Fraunces in my tests, added axes

--- a/_includes/interactive-controls.html
+++ b/_includes/interactive-controls.html
@@ -9,6 +9,7 @@
 				max="{{ axis.max }}"
 				value="{{ axis.default }}"
 				name="{{ axis.axis }}"
+				step="{{ axis.step | default: 0.1 }}"
 			/>
 		</li>
 		{% endfor %}
