Switch from Jekyll to 11ty

--- a/_includes/character-grid.html
+++ b/_includes/character-grid.html
@@ -1,7 +1,7 @@
 <ol class="character-grid">
-	{% for char in site.data.charset %}
-	<li>{{ char }}</li>
-	{% endfor %}
+  {% for char in charset %}
+  <li>{{ char }}</li>
+  {% endfor %}
 </ol>
 
 <div class="character-grid-zoom"></div>
