--- a/_includes/layouts/default.html
+++ b/_includes/layouts/default.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--
-			Once we load from Google Fonts API:
-			<link rel="preconnect" href="https://fonts.gstatic.com" />
-		-->
+    {% comment %} Once we load from Google Fonts API:
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    {% endcomment %}
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
