Inline styles and scripts by default
This should be figured out on a per-project basis, but is a good
default as long as no huge chuncks of CSS or JS get included (a
red flag to begin with).

--- a/_includes/layouts/default.html
+++ b/_includes/layouts/default.html
@@ -11,11 +11,15 @@
 		<title>
 			{{ site.title or renderData.title or title or metadata.title }}
 		</title>
-		<link rel="stylesheet" href="{% webpackAsset 'main.css' %}" />
+		<style>
+			{% webpackAssetContents 'main.css' %}
+		</style>
 	</head>
 
 	<body>
 		{{ content }}
-		<script src="{% webpackAsset 'main.js' %}"></script>
+		<script>
+			{% webpackAssetContents 'main.js' %}
+		</script>
 	</body>
 </html>
