Don't use Sass, but plain 'ol CSS
@import's are resolved by postcss, so we get a single css file out as
before.

--- a/_assets/css/_animation.css
+++ b/_assets/css/_animation.css
@@ -1,5 +1,5 @@
 .animates {
-	transition: background 1s; // To show effect of adding .in-view class
+	transition: background 1s; /* To show effect of adding .in-view class */
 	animation: example-animation 4s infinite alternate;
 	animation-play-state: paused;
 }
