Prevent styles.js generated by Webpack
`mini-css-extract-plugin` extracts CSS but leaves behind a practically
empty JS module. By importing styles from the JS entrypoint, webpack
will not create a new file.

--- a/_includes/layouts/default.html
+++ b/_includes/layouts/default.html
@@ -11,7 +11,7 @@
 		<title>
 			{{ site.title or renderData.title or title or metadata.title }}
 		</title>
-		<link rel="stylesheet" href="{% webpackAsset 'styles.css' %}" />
+		<link rel="stylesheet" href="{% webpackAsset 'main.css' %}" />
 	</head>
 
 	<body>
