Revert "Inline styles and scripts by default"
Sticking to externalizing CSS and JS for now. This might cause a tiny
delay on initial page load, but increases repeat visit performance a
lot since CSS and JS don't have to be re-downloaded.

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -11,15 +11,11 @@
 		<title>
 			{{ site.title or renderData.title or title or metadata.title }}
 		</title>
-		<style>
-			{% webpackAssetContents 'main.css' %}
-		</style>
+		<link rel="stylesheet" href="{% webpackAsset 'main.css' %}" />
 	</head>
 
 	<body>
 		{{ content }}
-		<script>
-			{% webpackAssetContents 'main.js' %}
-		</script>
+		<script src="{% webpackAsset 'main.js' %}"></script>
 	</body>
 </html>
