Unify path resolving for assets
Now all assets are resolved relative to where they are used. This was
already the case for including assets from JS and CSS, but not from
templates.

Example:

```html
{% webpackAssetPath '../css/main.css' %}
{% includeWebpackAsset '../img/icon.svg' %}
```

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -11,8 +11,11 @@
 		<title>
 			{{ site.title or renderData.title or title or metadata.title }}
 		</title>
-		<link rel="stylesheet" href="{% webpackAsset 'main.css' %}" />
-		<script defer src="{% webpackAsset 'main.js' %}"></script>
+		<link
+			rel="stylesheet"
+			href="{% webpackAssetPath '../css/main.css' %}"
+		/>
+		<script defer src="{% webpackAssetPath '../js/main.js' %}"></script>
 	</head>
 
 	<body>
