Add loading message example, refactor

--- a/src/_includes/interactive-controls.html
+++ b/src/_includes/interactive-controls.html
@@ -1,4 +1,5 @@
 <div class="interactive-controls">
+	<h2>Axes & Instances</h2>
 	<ul class="interactive-controls-sliders">
 		<li>
 			<label for="interactive-controls-fontsize">Size</label>
