--- a/src/css/_layout.css
+++ b/src/css/_layout.css
@@ -1,4 +1,13 @@
 main {
 	max-width: 50rem;
 	margin: 0 auto;
+	display: none;
+}
+
+.fonts-loaded main {
+	display: block;
+}
+
+h2 {
+	color: hotpink;
 }
