--- a/src/css/_variable-support.css
+++ b/src/css/_variable-support.css
@@ -1,9 +1,9 @@
-.variable-support {
+.variable-support-message {
 	display: block;
 }
 
 @supports (font-variation-settings: normal) {
-	.variable-support {
+	.variable-support-message {
 		display: none;
 	}
 }
