Lose the underscore for imported CSS files
Fixes #26

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,8 @@
-@import "./_font-faces.css";
-@import "./_generic.css";
-@import "./_variable-support.css";
-@import "./_loading.css";
-@import "./_layout.css";
-@import "./_animation.css";
-@import "./_character-grid.css";
-@import "./_interactive-controls.css";
+@import "./font-faces.css";
+@import "./generic.css";
+@import "./variable-support.css";
+@import "./loading.css";
+@import "./layout.css";
+@import "./animation.css";
+@import "./character-grid.css";
+@import "./interactive-controls.css";
