--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-@import "./font-faces.css";
+@import "./font.css";
 @import "./generic.css";
 @import "./variable-support.css";
 @import "./loading.css";
