Uncouple in-view logic with "animates" class
There might be other reasons to want to know when an element
is in view or not

--- a/src/css/animation.css
+++ b/src/css/animation.css
@@ -1,10 +1,10 @@
-.animates {
+.animation {
 	transition: background 1s; /* To show effect of adding .in-view class */
 	animation: example-animation 4s infinite alternate;
 	animation-play-state: paused;
 }
 
-.animates.in-view {
+.animation.in-view {
 	background: black;
 	animation-play-state: running;
 }
