Generate complete font stylesheet and js file with font metadata

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,4 @@
-@import "./_fonts.css";
+@import "./font.css";
 @import "./_animation.css";
 @import "./_character-grid.css";
 @import "./_interactive-controls.css";
