Add custom meta tags
For Open Graph, Twitter Cards, etc.

--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -5,6 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<meta name="description" content="{{ site.description }}" />
+		{%- for metatag in site.metatags %}
+		<meta{% for m in metatag %} {{m[0]}}="{{m[1]}}" {% endfor %} />
+		{%- endfor %}
 		<title>
 			{{ site.title or renderData.title or title or metadata.title }}
 		</title>
