--- a/src/css/font.css
+++ b/src/css/font.css
@@ -1,24 +1,1 @@
-@font-face {
-	font-family: "ScienceGothic-Medium";
-	src: url("../fonts/ScienceGothicVF.woff2");
-	font-weight: 100 900;
-	font-stretch: 50 200;
-}
-
-body {
-	font-family: "ScienceGothic-Medium", monospace;
-}
-
-:root {
-	--wght: 400;
-	--wdth: 100;
-	--YOPQ: 122;
-	--slnt: 0;
-}
-
-*,
-*::before,
-*::after {
-	font-variation-settings: "wght" var(--wght), "wdth" var(--wdth),
-		"YOPQ" var(--YOPQ), "slnt" var(--slnt);
-}
+/* Placeholder */
