Put CSS and JS in single file, make JS work with multiple files

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,7 +18,7 @@ limitations under the License.
 
 @import "./animation.css";
 @import "./character-grid.css";
-@import "./font.css";
+@import "./fonts.css";
 @import "./generic.css";
 @import "./interactive-controls.css";
 @import "./layout.css";
