Apply variable font class per slider component
The directory names for the generated data in ./_data is based
on the classname. This in turn is based on a "slugified" name of
the font.

Maybe upon generating new _data, we should empty the dir? I got
confused a couple of times by old font _data files lingering.

--- a/src/_includes/interactive-controls.html
+++ b/src/_includes/interactive-controls.html
@@ -1,4 +1,4 @@
-<div class="interactive-controls">
+<div class="interactive-controls {{ font[0] }}">
 	<h2>Axes & Instances</h2>
 	<ul class="interactive-controls-sliders">
 		<li>
@@ -68,3 +68,5 @@
 		</p>
 	</div>
 </div>
+
+<hr />
