Generate all componets per font
Grids are generated for all fonts, sliders only for variable
fonts.

--- a/src/_includes/character-grid.html
+++ b/src/_includes/character-grid.html
@@ -1,5 +1,7 @@
-<ol class="character-grid">
-	{% for char in charset %}
+<h2>Charset for {{ font[0] }}</h2>
+
+<ol class="character-grid {{ font[0] }}">
+	{% for char in font[1].charset %}
 	<li>{{ char }}</li>
 	{% endfor %}
 </ol>
