--- a/src/_includes/interactive-controls.html
+++ b/src/_includes/interactive-controls.html
@@ -1,5 +1,5 @@
 <div class="interactive-controls {{ font[0] }}">
-	<h2>Axes & Instances</h2>
+	<h2>Axes & Instances for {{ font[0] }}</h2>
 	<ul class="interactive-controls-sliders">
 		<li>
 			<label for="interactive-controls-fontsize">Size</label>
@@ -68,5 +68,3 @@
 		</p>
 	</div>
 </div>
-
-<hr />
