Output charset according to new format
[!] Warning: Prettier has a problem with this syntax for some
reason, so this was committed with --no-verify. Fix will be
sought!

--- a/src/_includes/character-grid.html
+++ b/src/_includes/character-grid.html
@@ -2,7 +2,7 @@
 
 <ol class="character-grid {{ font[0] }}">
 	{% for char in font[1].charset %}
-	<li>{{ char }}</li>
+		<li>&#x{{ char.unicode }};</li>
 	{% endfor %}
 </ol>
 
