--- a/src/_includes/character-grid.html
+++ b/src/_includes/character-grid.html
@@ -1,9 +1,31 @@
 <h2>Charset for {{ font[0] }}</h2>
 
-<ol class="character-grid {{ font[0] }}">
-	{% for char in font[1].charset %}
-	<li>{{ char }}</li>
-	{% endfor %}
-</ol>
+<!--
+Create a dropdown to select the font that should
+be applied to the character grid.
+-->
+<select class="character-grid-toggle">
+{% for font in fonts %}
+	<option value="{{ font[0] }}">{{ font[0] }}</option>
+{% endfor %}
+</select>
 
-<div class="character-grid-zoom"></div>
+{% for font in fonts %}
+<div class="character-grid {{ font[0] }}">
+	<!--
+	Draw a grid with the characters of the first font.
+	-->
+		<ol class="character-grid-list">
+			{% for char in font[1].charset %}
+			<li>{{ char }}</li>
+			{% endfor %}
+		</ol>
+
+	<div class="character-grid-zoom"></div>
+</div>
+<!--
+Break out of this loop, as the only need the
+first font to fill out character grid with.
+-->
+{% break %}
+{% endfor %}
