--- a/src/_includes/character-grid.html
+++ b/src/_includes/character-grid.html
@@ -1,4 +1,4 @@
-<h2>Charset for {{ font[0] }}</h2>
+<h2>Charset for {{ fontdata[main_id].name }}</h2>
 
 <!--
 Create a dropdown to select the font that should
@@ -6,50 +6,43 @@ be applied to the character grid.
 -->
 <select class="character-grid-toggle">
 {% for font in fontdata %}
-<option value="{{ font.selector }}">
-	{{ font.style }}
-</option>
+	<option value="{{ font.selector }}" {% if font.selector == main_selector %}selected{% endif %}>
+		{{ font.style }}
+	</option>
 {% endfor %}
 </select>
 
-{% for font in fonts %}
-	<div class="character-grid {{ fontdata[0].selector }}">
+<!--
+Draw a grid with the characters of the main font.
+-->
+<div class="character-grid {{ main_selector }}">
+	{% for set in fonts[main_selector].charset %}
 		<!--
-		Draw a grid with the characters of the first font.
+		Skip the separators, we're not interested in those.
 		-->
-		{% for set in font[1].charset %}
-			<!--
-			Skip the separators, we're not interested in those.
-			-->
-			{% if set.category == "Separator" %}
-				{% continue %}
+		{% if set.category == "Separator" %}
+			{% continue %}
+		{% endif %}
+		<!--
+		Create a title based on (sub)category and script.
+		-->
+		<h3>
+			{{ set.category }}
+			{% if set.subCategory %}
+				{{ set.subCategory }}
 			{% endif %}
-			<!--
-			Create a title based on (sub)category and script.
-			-->
-			<h3>
-				{{ set.category }}
-				{% if set.subCategory %}
-					{{ set.subCategory }}
-				{% endif %}
-				{% if set.script %}
-					{{ set.script | capitalize }}
-				{% endif %}
-			</h3>
-			<!--
-			Print each char in this category
-			-->
-			<ol class="character-grid-list">
-			{% for char in set.chars %}
-				<li>&#x{{ char }};</li>
-			{% endfor %}
-			</ol>
+			{% if set.script %}
+				{{ set.script | capitalize }}
+			{% endif %}
+		</h3>
+		<!--
+		Print each char in this category
+		-->
+		<ol class="character-grid-list">
+		{% for char in set.chars %}
+			<li>&#x{{ char }};</li>
 		{% endfor %}
-		<div class="character-grid-zoom"></div>
-	</div>
-	<!--
-	Break out of this loop, as the only need the
-	first font to fill out character grid with.
-	-->
-{% break %}
-{% endfor %}
+		</ol>
+	{% endfor %}
+	<div class="character-grid-zoom"></div>
+</div>
