--- a/src/_includes/interactive-controls.html
+++ b/src/_includes/interactive-controls.html
@@ -1,5 +1,5 @@
 <div class="interactive-controls">
-	<h2>Axes & Instances for {{ fontdata[0].name }}</h2>
+	<h2>Axes & Instances for {{ fontdata[main_id].name }}</h2>
 	<ul class="interactive-controls-sliders">
 		<!--
 		Create a slider to control the font size.
@@ -21,8 +21,8 @@
 		If the font has variable axes, also create a sliders
 		for each one of them.
 		-->
-		{% if fonts[mainfont].axes.length != 0 %}
-			{% for axis in fonts[mainfont].axes %}
+		{% if fonts[main_selector].axes.length != 0 %}
+			{% for axis in fonts[mainfont_id].axes %}
 			<li>
 				<label for="axis-{{ axis.axis }}">{{ axis.name }}</label>
 				<input
@@ -44,14 +44,14 @@
 	If the variable font has named instances, create a
 	dropdown so you can try them out.
 	-->
-	{% if fonts[mainfont].instances.length != 0 %}
+	{% if fonts[main_selector].instances.length != 0 %}
 		<div>
 			<label for="interactive-controls-instances-select">Instances</label>
 			<select
 				id="interactive-controls-instances-select"
 				class="interactive-controls-instances"
 			>
-				{% for instance in fonts[mainfont].instances %}
+				{% for instance in fonts[mainfont_id].instances %}
 				<option value="{{ instance.axes | json_stringify | escape }}">
 					{{ instance.name }}
 				</option>
@@ -73,7 +73,7 @@
 				class="interactive-controls-styles"
 			>
 				{% for font in fontdata %}
-				<option value="{{ font.selector }}">
+				<option value="{{ font.selector }}" {% if font.selector == main_selector %}selected{% endif %}>
 					{{ font.style }}
 				</option>
 				{% endfor %}
@@ -81,7 +81,7 @@
 		</div>
 	{% endif %}
 
-	<div class="interactive-controls-text {{ fontdata[0].selector }}">
+	<div class="interactive-controls-text {{ main_selector }}">
 		<h1>Lorem</h1>
 		<p>
 			Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
