Allow easy setting of fallback font
The font in this CSS variable will be used in the font stack of
the specimen. Something like Adobe NotDef would be ideal, as it
would show a "tofu box" for every unsupported character from
the specimen font.

--- a/src/css/generic.css
+++ b/src/css/generic.css
@@ -2,6 +2,9 @@
 :root {
 	--page-bg: #fff;
 	--page-text: #000;
+
+	/* Set fallback font for specimen here, e.g. Adobe NotDef */
+	--specimen-fallback-font: "";
 }
 
 *,
