Fix looping over axes

--- a/src/_includes/interactive-controls.html
+++ b/src/_includes/interactive-controls.html
@@ -22,7 +22,7 @@
 		for each one of them.
 		-->
 		{% if fonts[main_selector].axes.length != 0 %}
-			{% for axis in fonts[mainfont_id].axes %}
+			{% for axis in fonts[main_selector].axes %}
 			<li>
 				<label for="axis-{{ axis.axis }}">{{ axis.name }}</label>
 				<input
@@ -51,7 +51,7 @@
 				id="interactive-controls-instances-select"
 				class="interactive-controls-instances"
 			>
-				{% for instance in fonts[mainfont_id].instances %}
+				{% for instance in fonts[main_selector].instances %}
 				<option value="{{ instance.axes | json_stringify | escape }}">
 					{{ instance.name }}
 				</option>
